# mario_bross_game

./: .gitignore  DOCUMENTACION.md  DOCUMENTACION_ENTIDADES.md  README.md  main.py  pyproject.toml
mario_bross/: main.py
mario_bross/core/: game.py  loop.py  runner.py
mario_bross/entidades/: enemigos.py  entidad.py  personaje.py
mario_bross/estructuras/: piso.py
mario_bross/pantallas/: escena1.py
mario_bross/utils/: config.py
