[tool.poetry]
name = "mario-bross"
version = "0.1.0"
description = ""
authors = ["techatlasdev <srgoqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"

[tool.poetry.scripts]
dev = "mario_bross.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
